--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,6 +41,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
     - name: Install CUDA runtime (if needed)
       if: matrix.CUDA != '0' && matrix.ONEAPI == 0
       run: |
