--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,9 +41,6 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
         node-version: '20'
     - name: Install CUDA runtime (if needed)
       if: matrix.CUDA != '0' && matrix.ONEAPI == 0
@@ -167,16 +164,19 @@ jobs:
     - uses: actions/upload-artifact@v3
       if: matrix.compiler == 'clang++-10' && matrix.CUDA == '0' && matrix.ONEAPI == '0'
       with:
+        node-version: '20'
         name: FIRESTARTER-linux
         path: build/src/FIRESTARTER
     - uses: actions/upload-artifact@v3
       if: matrix.compiler == 'clang++-10' && matrix.CUDA != '0' && matrix.ONEAPI == '0'
       with:
+        node-version: '20'
         name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
         path: build/src/FIRESTARTER_CUDA
     - uses: actions/upload-artifact@v3
       if: matrix.compiler == 'clang++-10' && matrix.CUDA == '0' && matrix.ONEAPI != '0'
       with:
+        node-version: '20'
         name: FIRESTARTER_ONEAPI_${{ matrix.ONEAPI }}-linux
         path: build/src/FIRESTARTER_ONEAPI
   build-windows:
@@ -194,6 +194,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
+        node-version: '20'
     - name: Install CMake
       uses: crazy-max/ghaction-chocolatey@v1
       with:
@@ -244,6 +245,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == false
       with:
+        node-version: '20'
         name: FIRESTARTER-windows
         path: |
           build\src\FIRESTARTER.exe
@@ -251,6 +253,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == true
       with:
+        node-version: '20'
         name: FIRESTARTER-windows
         path: |
           build\src\FIRESTARTER.exe
@@ -266,6 +269,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
+        node-version: '20'
         fetch-depth: '0'
     - name: Install Homebrew dependencies
       run: |
@@ -292,12 +296,8 @@ jobs:
     - uses: actions/upload-artifact@v3
       if: matrix.os == 'macos-12'
       with:
+        node-version: '20'
         name: FIRESTARTER-macOS_12
-        path: build/src/FIRESTARTER
-    - uses: actions/upload-artifact@v3
-      if: matrix.os == 'macos-11'
-      with:
-        name: FIRESTARTER-macOS_11
         path: build/src/FIRESTARTER
   create-download:
     name: Create download for Website
@@ -306,6 +306,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
+        node-version: '20'
         fetch-depth: '0'
         path: 'sources'
     - name: Checkout submodules
@@ -319,6 +320,7 @@ jobs:
     - name: Retrieve FIRESTARTER-linux 
       uses: actions/download-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER-linux
         path: FIRESTARTER
     - name: Move binary to right directory
@@ -330,6 +332,7 @@ jobs:
     - name: Retrieve FIRESTARTER_CUDA_8.0-linux 
       uses: actions/download-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER_CUDA_8.0-linux
         path: FIRESTARTER
     - name: Move binary to right directory
@@ -341,6 +344,7 @@ jobs:
     - name: Retrieve FIRESTARTER_CUDA_11.0-linux 
       uses: actions/download-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER_CUDA_11.0-linux
         path: FIRESTARTER
     - name: Move binary to right directory
@@ -352,6 +356,7 @@ jobs:
     - name: Retrieve FIRESTARTER_CUDA_NVHPC-22.5-linux 
       uses: actions/download-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER_CUDA_NVHPC-22.5-linux
         path: FIRESTARTER
     - name: Move binary to right directory
@@ -363,6 +368,7 @@ jobs:
     - name: Retrieve FIRESTARTER_ONEAPI_2024.0-linux 
       uses: actions/download-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER_ONEAPI_2024.0-linux
         path: FIRESTARTER
     - name: Move binary to right directory
@@ -373,6 +379,7 @@ jobs:
     - name: Retrieve FIRESTARTER_ONEAPI_2023.2.0-linux 
       uses: actions/download-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER_ONEAPI_2023.2.0-linux
         path: FIRESTARTER
     - name: Move binary to right directory
@@ -395,6 +402,7 @@ jobs:
     - name: Retrieve FIRESTARTER-macOS_12
       uses: actions/download-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER-macOS_12
         path: FIRESTARTER
     - name: Move binary to right directory
@@ -406,6 +414,7 @@ jobs:
     - name: Retrieve FIRESTARTER-windows
       uses: actions/download-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER-windows
         path: FIRESTARTER
     - name: Move binary to right directory
@@ -428,6 +437,7 @@ jobs:
         tar -cvzf FIRESTARTER.tar.gz CHANGELOG README.md LICENSE libhwloc-15.dll 3rd-party-licenses examples sources FIRESTARTER*
     - uses: actions/upload-artifact@v3
       with:
+        node-version: '20'
         name: FIRESTARTER.tar.gz
         path: FIRESTARTER.tar.gz
 
