--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,10 +39,11 @@ jobs:
       run: |
         sudo apt install clang-10
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: '20'
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
       with:
         fetch-depth: '0'
     - name: Install CUDA runtime (if needed)
@@ -164,17 +165,17 @@ jobs:
     - name: Test FIRESTARTER (default)
       if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
       run: ./build/src/FIRESTARTER -t 1
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: matrix.compiler == 'clang++-10' && matrix.CUDA == '0' && matrix.ONEAPI == '0'
       with:
         name: FIRESTARTER-linux
         path: build/src/FIRESTARTER
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: matrix.compiler == 'clang++-10' && matrix.CUDA != '0' && matrix.ONEAPI == '0'
       with:
         name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
         path: build/src/FIRESTARTER_CUDA
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: matrix.compiler == 'clang++-10' && matrix.CUDA == '0' && matrix.ONEAPI != '0'
       with:
         name: FIRESTARTER_ONEAPI_${{ matrix.ONEAPI }}-linux
@@ -191,7 +192,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: '0'
     - name: Install CMake
@@ -241,14 +242,14 @@ jobs:
       if: matrix.cfg.CUDA == '0'
       shell: pwsh
       run: .\build\src\FIRESTARTER.exe -t 1
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == false
       with:
         name: FIRESTARTER-windows
         path: |
           build\src\FIRESTARTER.exe
           build\src\libhwloc-15.dll
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: matrix.cfg.CUDA == '0' && matrix.cfg.MSVC == true
       with:
         name: FIRESTARTER-windows
@@ -264,7 +265,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: '0'
     - name: Install Homebrew dependencies
@@ -289,12 +290,12 @@ jobs:
       run: |
         cd build
         ./src/FIRESTARTER -t 1
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: matrix.os == 'macos-12'
       with:
         name: FIRESTARTER-macOS_12
         path: build/src/FIRESTARTER
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: matrix.os == 'macos-11'
       with:
         name: FIRESTARTER-macOS_11
@@ -304,7 +305,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-linux, build-macos, build-windows]
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: '0'
         path: 'sources'
@@ -317,7 +318,7 @@ jobs:
         mkdir build
     # Linux
     - name: Retrieve FIRESTARTER-linux 
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER-linux
         path: FIRESTARTER
@@ -328,7 +329,7 @@ jobs:
         chmod +x FIRESTARTER-linux
     # Linux CUDA 8.0
     - name: Retrieve FIRESTARTER_CUDA_8.0-linux 
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_CUDA_8.0-linux
         path: FIRESTARTER
@@ -339,7 +340,7 @@ jobs:
         chmod +x FIRESTARTER_CUDA_8.0
     # Linux CUDA 11.0
     - name: Retrieve FIRESTARTER_CUDA_11.0-linux 
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_CUDA_11.0-linux
         path: FIRESTARTER
@@ -350,7 +351,7 @@ jobs:
         chmod +x FIRESTARTER_CUDA_11.0
     # Linux CUDA HPC
     - name: Retrieve FIRESTARTER_CUDA_NVHPC-22.5-linux 
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_CUDA_NVHPC-22.5-linux
         path: FIRESTARTER
@@ -361,7 +362,7 @@ jobs:
         chmod +x FIRESTARTER_CUDA_NVHPC-22.5
     # Linux OneAPI
     - name: Retrieve FIRESTARTER_ONEAPI_2024.0-linux 
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_ONEAPI_2024.0-linux
         path: FIRESTARTER
@@ -371,7 +372,7 @@ jobs:
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_ONEAPI_2024.0
     - name: Retrieve FIRESTARTER_ONEAPI_2023.2.0-linux 
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER_ONEAPI_2023.2.0-linux
         path: FIRESTARTER
@@ -382,7 +383,7 @@ jobs:
         chmod +x FIRESTARTER_ONEAPI_2023.2.0
     # OSX 11.0
     #- name: Retrieve FIRESTARTER-macOS_11.0
-    #  uses: actions/download-artifact@v3
+    #  uses: actions/download-artifact@v4
     #  with:
     #    name: FIRESTARTER-macOS_11.0
     #    path: FIRESTARTER
@@ -393,7 +394,7 @@ jobs:
     #    chmod +x ../FIRESTARTER-macOS_11.0
     # OSX 10.15
     - name: Retrieve FIRESTARTER-macOS_12
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER-macOS_12
         path: FIRESTARTER
@@ -404,7 +405,7 @@ jobs:
         chmod +x FIRESTARTER-macOS_12
     # Windows
     - name: Retrieve FIRESTARTER-windows
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: FIRESTARTER-windows
         path: FIRESTARTER
@@ -426,7 +427,7 @@ jobs:
         mv FIRESTARTER-linux FIRESTARTER
         rm -rf sources/.git*
         tar -cvzf FIRESTARTER.tar.gz CHANGELOG README.md LICENSE libhwloc-15.dll 3rd-party-licenses examples sources FIRESTARTER*
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         name: FIRESTARTER.tar.gz
         path: FIRESTARTER.tar.gz
