Readd CUDA in Windows (#59)
* re-enable cuda for windows
* remove some macos 11

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -188,6 +188,7 @@ jobs:
         cfg:
           - { CUDA: '0', ONEAPI: '0', MSVC: true }
           - { CUDA: '0', ONEAPI: '0', MSVC: false }
+          - { CUDA: '11.0', MSVC: true }
 
     runs-on: ${{ matrix.os }}
 
@@ -204,6 +205,12 @@ jobs:
       if: matrix.cfg.MSVC == false
       with:
         args: install mingw
+    - name: Install CUDA Toolkit
+      if: matrix.cfg.CUDA == '11.0'
+      shell: pwsh
+      run: |
+        Set-ExecutionPolicy unrestricted
+        & '.github\\install-cuda.ps1' -Version '11.0'
     - uses: ilammy/msvc-dev-cmd@v1
       if: matrix.cfg.MSVC == true
     - name: Create build directory
@@ -222,6 +229,14 @@ jobs:
       run: |
         cd build
         cmake -G "NMake Makefiles" ..
+    - name: Run CMake configure
+      if: matrix.cfg.CUDA != '0'
+      shell: pwsh
+      run: |
+        cd build
+        ls 
+        dir "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v11.0"
+        cmake -G "NMake Makefiles" -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCUDAToolkit_ROOT="C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v11.0" ..
     - name: Build
       shell: pwsh
       run: |
@@ -248,6 +263,13 @@ jobs:
         name: FIRESTARTER-windows
         path: |
           build\src\FIRESTARTER.exe
+          build\src\libhwloc-15.dll
+    - uses: actions/upload-artifact@v2
+      if: matrix.cfg.CUDA != '0'
+      with:
+        name: FIRESTARTER_CUDA_${{ matrix.cfg.CUDA }}-windows
+        path: |
+          build\src\FIRESTARTER_CUDA.exe
           build\src\libhwloc-15.dll
   build-macos:
     strategy:
@@ -289,9 +311,9 @@ jobs:
         name: FIRESTARTER-macOS_12
         path: build/src/FIRESTARTER
     - uses: actions/upload-artifact@v4
-      if: matrix.os == 'macos-11'
+      if: matrix.os == 'macos-13'
       with:
-        name: FIRESTARTER-macOS_11
+        name: FIRESTARTER-macOS_13
         path: build/src/FIRESTARTER
   create-download:
     name: Create download for Website
@@ -374,18 +396,6 @@ jobs:
         mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2023.2.0
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER_ONEAPI_2023.2.0
-    # OSX 11.0
-    #- name: Retrieve FIRESTARTER-macOS_11.0
-    #  uses: actions/download-artifact@v4
-    #  with:
-    #    name: FIRESTARTER-macOS_11.0
-    #    path: FIRESTARTER
-    #- name: Move binary to right directory
-    #  run: |
-    #    mv FIRESTARTER/FIRESTARTER ../FIRESTARTER-macOS_11.0
-    #    rm -rf FIRESTARTER
-    #    chmod +x ../FIRESTARTER-macOS_11.0
-    # OSX 10.15
     - name: Retrieve FIRESTARTER-macOS_12
       uses: actions/download-artifact@v4
       with:
@@ -396,6 +406,16 @@ jobs:
         mv FIRESTARTER/FIRESTARTER FIRESTARTER-macOS_12
         rm -rf FIRESTARTER
         chmod +x FIRESTARTER-macOS_12
+    - name: Retrieve FIRESTARTER-macOS_13
+      uses: actions/download-artifact@v4
+      with:
+        name: FIRESTARTER-macOS_13
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER FIRESTARTER-macOS_13
+        rm -rf FIRESTARTER
+        chmod +x FIRESTARTER-macOS_13
     # Windows
     - name: Retrieve FIRESTARTER-windows
       uses: actions/download-artifact@v4
@@ -405,6 +425,17 @@ jobs:
     - name: Move binary to right directory
       run: |
         mv FIRESTARTER/FIRESTARTER.exe FIRESTARTER-windows.exe
+        mv FIRESTARTER/libhwloc-15.dll libhwloc-15.dll
+        rm -rf FIRESTARTER
+    # Windows CUDA
+    - name: Retrieve FIRESTARTER_CUDA_11.0-windows
+      uses: actions/download-artifact@v2
+      with:
+        name: FIRESTARTER_CUDA_11.0-windows
+        path: FIRESTARTER
+    - name: Move binary to right directory
+      run: |
+        mv FIRESTARTER/FIRESTARTER_CUDA.exe FIRESTARTER_CUDA_11.0-windows.exe
         mv FIRESTARTER/libhwloc-15.dll libhwloc-15.dll
         rm -rf FIRESTARTER
     # Create tar.gz
