--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -158,7 +158,7 @@ jobs:
       run: |
         cd build
         strip src/FIRESTARTER_CUDA
-        sudo rm ${CUDA_ROOT}
+        sudo rm -rf ${CUDA_ROOT}
     - name: Strip binary (OneAPI)
       if: matrix.ONEAPI != '0' && matrix.CUDA == '0'
       run: |
