--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,14 +4,62 @@ on: [push, pull_request]
 
 jobs:
 
+  install-cuda-oneapi:
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        CUDA: ['8.0', '11.0', 'NVHPC-22.5', '0']
+        ONEAPI: ['2021.2', '2021.3', '0']
+    steps:
+    - name: Install CUDA (if needed)
+      if: matrix.CUDA != '0' && matrix.ONEAPI == '0'
+      run: |
+        case ${{ matrix.CUDA }} in
+          8.0)
+            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run
+            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/patches/2/cuda_8.0.61.2_linux-run
+            sudo sh cuda_8.0.61_375.26_linux-run --extract=${CUDA_ROOT}
+            sudo sh ${CUDA_ROOT}/cuda-linux64-rel-8.0.61-21551265.run --tar mxvf -C ${CUDA_ROOT}
+            sudo sh cuda_8.0.61.2_linux-run --accept-eula --silent --installdir=${CUDA_ROOT}
+            rm cuda_8.0.61_375.26_linux-run
+            rm cuda_8.0.61.2_linux-run
+            ;;
+          11.0)
+            wget https://developer.download.nvidia.com/compute/cuda/11.0.3/local_installers/cuda_11.0.3_450.51.06_linux.run
+            sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT} --override --silent
+            rm cuda_11.0.3_450.51.06_linux.run
+            ;;
+          NVHPC-22.5)
+            wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            rm nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="$CUDA_ROOT" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
+            rm -rf nvhpc_2022_225_Linux_x86_64_cuda_11.7
+        esac
+    - name: Install OneAPI Base-Toolkit (if needed)
+      if: matrix.ONEAPI != '0' && matrix.CUDA == '0'
+      run: |
+        wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
+        echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+        sudo apt update
+        sudo apt install intel-basekit-${{ matrix.ONEAPI }}
+    outputs:
+      CUDA_ROOT: /usr/local/cuda/${{ matrix.CUDA }}
+      ONEAPI_ROOT: /usr/local/oneapi/${{ matrix.ONEAPI }}
+
+
+
   build-linux:
+    
+    needs: install-cuda-oneapi
+
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-        compiler: [g++-10]
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
         CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
-        ONEAPI: ['0']
+        ONEAPI: ['0', '2023.2.0', '2024.0']
 
     runs-on: ${{ matrix.os }}
 
@@ -95,7 +143,6 @@ jobs:
       env:
         CXX: ${{ matrix.compiler }}
       run: |
-        ls ${CUDA_ROOT}
         export CPATH=${CUDA_ROOT}/include:${CPATH}
         export LD_LIBRARY_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
         export LIBRARY_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs:${LIBRARY_PATH}
@@ -159,7 +206,6 @@ jobs:
       run: |
         cd build
         strip src/FIRESTARTER_CUDA
-        sudo rm -rf ${CUDA_ROOT}
     - name: Strip binary (OneAPI)
       if: matrix.ONEAPI != '0' && matrix.CUDA == '0'
       run: |
