--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -60,8 +60,8 @@ jobs:
 
   build-linux:
     
-    needs: ['install-oneapi', 'install-oneapi']
-    
+    needs: ['install-cuda', 'install-oneapi']
+
     strategy:
       fail-fast: false
       matrix:
