--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,18 +27,18 @@ jobs:
             wget https://developer.download.nvidia.com/compute/cuda/11.0.3/local_installers/cuda_11.0.3_450.51.06_linux.run
             sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT}${{ matrix.CUDA }} --override --silent
             rm cuda_11.0.3_450.51.06_linux.run
-    - name: Install CUDA NVHPC-22.5
-      run: |
-            df
-            wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-            echo "extract"
-            tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-            echo "remove tar gz"
-            rm nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-            echo "install"
-            sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="${CUDA_ROOT}${{ matrix.CUDA }}" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
-            echo "remove installer"
-            rm -rf nvhpc_2022_225_Linux_x86_64_cuda_11.7
+#    - name: Install CUDA NVHPC-22.5
+#      run: |
+#            df
+#            wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+#            echo "extract"
+#            tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+#            echo "remove tar gz"
+#            rm nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+#            echo "install"
+#            sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="${CUDA_ROOT}${{ matrix.CUDA }}" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
+#            echo "remove installer"
+#            rm -rf nvhpc_2022_225_Linux_x86_64_cuda_11.7
 
   install-oneapi:
     runs-on: ubuntu-20.04
@@ -63,7 +63,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
+        CUDA: ['0', '8.0', '11.0']
         ONEAPI: ['0', '2023.2.0', '2024.0']
 
     runs-on: ${{ matrix.os }}
