--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -107,13 +107,14 @@ jobs:
           export LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
           export LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs:${LIBRARY_PATH}
           export CUDA_LIB_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs
-          export PATH=${CUDA_ROOT}${{ matrix.CUDA }}:${PATH}
+          export PATH=${CUDA_ROOT}${{ matrix.CUDA }}/bin:${PATH}
           export CUDA_HOME=${CUDA_ROOT}${{ matrix.CUDA }}
           export CUDA_PATH=${CUDA_ROOT}${{ matrix.CUDA }}
           export CUDAToolkit_ROOT=${CUDA_ROOT}${{ matrix.CUDA }}
+          export CUDA_BIN_PATH=${CUDA_ROOT}${{ matrix.CUDA }}
   
           cd build
-          cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}${{ matrix.CUDA }}/lib64/stubs/" ..
+          cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda${{ matrix.CUDA }} -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}${{ matrix.CUDA }}/lib64/stubs/" ..
       - name: Run CMake configure (CUDA with NVHPC)
         if: matrix.CUDA == 'NVHPC-22.5'
         env:
