--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -49,7 +49,7 @@ jobs:
     needs: ['install-cuda']
     
     strategy:
-      fail-fast: false
+#      fail-fast: false
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
@@ -113,6 +113,9 @@ jobs:
           export CUDA_PATH=${CUDA_ROOT}${{ matrix.CUDA }}
           export CUDAToolkit_ROOT=${CUDA_ROOT}${{ matrix.CUDA }}/bin
           export CUDA_BIN_PATH=${CUDA_ROOT}${{ matrix.CUDA }}
+
+          ls ${CUDA_ROOT}${{ matrix.CUDA }}
+          ls ${CUDA_ROOT}${{ matrix.CUDA }}/bin
   
           cd build
           cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda${{ matrix.CUDA }} -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}${{ matrix.CUDA }}/lib64/stubs/" ..
