--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -185,27 +185,27 @@ jobs:
     - name: UnInstall g++-7 (if needed)
       if: matrix.compiler == 'g++-7'
       run: |
-        sudo apt uninstall g++-7
+        sudo apt remove g++-7
         sudo apt autoremove
     - name: UnInstall g++-8 (if needed)
       if: matrix.compiler == 'g++-8'
       run: |
-        sudo apt uninstall g++-8
+        sudo apt remove g++-8
         sudo apt autoremove
     - name: UnInstall clang++-8 (if needed)
       if: matrix.compiler == 'clang++-8'
       run: |
-        sudo apt uninstall clang-8
+        sudo apt remove clang-8
         sudo apt autoremove
     - name: UnInstall clang++-9 (if needed)
       if: matrix.compiler == 'clang++-9'
       run: |
-        sudo apt uninstall clang-9
+        sudo apt remove clang-9
         sudo apt autoremove
     - name: UnInstall clang++-10 (if needed)
       if: matrix.compiler == 'clang++-10'
       run: |
-        sudo apt uninstall clang-10
+        sudo apt remove clang-10
         sudo apt autoremove
     - name: Install CUDA runtime (if needed)
       if: matrix.CUDA != '0' && matrix.ONEAPI == 0
