--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,8 +5,8 @@ on: [push, pull_request]
 jobs:
   build-linux:
     strategy:
-      max-parallel: 1 # Sets the limit of jobs to run concurrently
-      fail-fast: false
+#      max-parallel: 1 # Sets the limit of jobs to run concurrently
+      fail-fast: true
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
