--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,7 +5,8 @@ on: [push, pull_request]
 jobs:
   build-linux:
     strategy:
-      fail-fast: false
+#      max-parallel: 1 # Sets the limit of jobs to run concurrently
+      fail-fast: true
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
@@ -17,7 +18,12 @@ jobs:
     env:
       CUDA_ROOT: '/usr/local/cuda'
 
+#kudos to https://github.com/easimon/maximize-build-space/blob/master/action.yml
     steps:
+    - name: Try to clean up some things
+      run: |
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /usr/share/dotnet
     - name: Install g++-7 (if needed)
       if: matrix.compiler == 'g++-7'
       run: |
@@ -180,6 +186,41 @@ jobs:
       with:
         name: FIRESTARTER_ONEAPI_${{ matrix.ONEAPI }}-linux
         path: build/src/FIRESTARTER_ONEAPI
+    
+    - name: UnInstall g++-7 (if needed)
+      if: matrix.compiler == 'g++-7'
+      run: |
+        sudo apt remove g++-7
+        sudo apt autoremove
+    - name: UnInstall g++-8 (if needed)
+      if: matrix.compiler == 'g++-8'
+      run: |
+        sudo apt remove g++-8
+        sudo apt autoremove
+    - name: UnInstall clang++-8 (if needed)
+      if: matrix.compiler == 'clang++-8'
+      run: |
+        sudo apt remove clang-8
+        sudo apt autoremove
+    - name: UnInstall clang++-9 (if needed)
+      if: matrix.compiler == 'clang++-9'
+      run: |
+        sudo apt remove clang-9
+        sudo apt autoremove
+    - name: UnInstall clang++-10 (if needed)
+      if: matrix.compiler == 'clang++-10'
+      run: |
+        sudo apt remove clang-10
+        sudo apt autoremove
+    - name: UnInstall CUDA runtime (if needed)
+      if: matrix.CUDA != '0' && matrix.ONEAPI == '0'
+      run: |
+        sudo rm -rf ${CUDA_ROOT}
+    - name: UnInstall OneAPI Base-Toolkit (if needed)
+      if: matrix.ONEAPI != '0' && matrix.CUDA == '0'
+      run: |
+        sudo apt remove intel-basekit-${{ matrix.ONEAPI }}
+        sudo apt autoremove
   build-windows:
     strategy:
       fail-fast: false
